Specifying a working directory(WORKDIR)

--- a/simpleweb/Dockerfile
+++ b/simpleweb/Dockerfile
@@ -1,11 +1,11 @@
 # Specify a base image
-FROM node:16-alpine
+FROM node:alpine
+
+WORKDIR /usr/app
 
 # Install some dependencies
 COPY ./ ./
-RUN rm -rf node_modules package-lock.json && \
-    npm cache clean --force && \
-    yarn install
+RUN yarn install
 
 # Default command
 CMD ["npm", "start"]
