--- a/1.mini-microservice-app-grider/infra/k8s/posts-depl.yaml
+++ b/1.mini-microservice-app-grider/infra/k8s/posts-depl.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: posts
-          image: nebojsa/posts:0.0.5
+          image: nebojsa/posts:latest
