Debuging docker errors

--- a/1.mini-microservice-app-grider/blog/infra/k8s/event-bus-depl.yaml
+++ b/1.mini-microservice-app-grider/blog/infra/k8s/event-bus-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: event-bus
-          image: nebojsa/event-bus
+          image: inquityy/event-bus
 ---
 apiVersion: v1
 kind: Service
