--- a/1.mini-microservice-app-grider/blog/infra/k8s/comments-depl.yaml
+++ b/1.mini-microservice-app-grider/blog/infra/k8s/comments-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: comments
-          image: nebojsa/comments
+          image: inquityy/comments
 ---
 apiVersion: v1
 kind: Service
