--- a/1.mini-microservice-app-grider/blog/infra/k8s/moderation-depl.yaml
+++ b/1.mini-microservice-app-grider/blog/infra/k8s/moderation-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: moderation
-          image: nebojsa/moderation
+          image: inquityy/moderation
 ---
 apiVersion: v1
 kind: Service
