--- a/1.mini-microservice-app-grider/blog/infra/k8s/posts-depl.yaml
+++ b/1.mini-microservice-app-grider/blog/infra/k8s/posts-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: posts
-          image: nebojsa/posts:latest
+          image: inquityy/posts:latest
 ---
 apiVersion: v1
 kind: Service
