--- a/1.mini-microservice-app-grider/blog/infra/k8s/query-depl.yaml
+++ b/1.mini-microservice-app-grider/blog/infra/k8s/query-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: query
-          image: nebojsa/query
+          image: inquityy/query
 ---
 apiVersion: v1
 kind: Service
@@ -26,5 +26,5 @@ spec:
   ports:
     - name: query
       protocol: TCP
-      port: 4003
-      targetPort: 4003
+      port: 4002
+      targetPort: 4002
