--- a/1.mini-microservice-app-grider/ticketing/infra/k8s/auth-depl.yaml
+++ b/1.mini-microservice-app-grider/ticketing/infra/k8s/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: inquityy/auth
+          image: cygnetops/auth
           env:
             - name: JWT_KEY
               valueFrom:
