--- a/1.mini-microservice-app-grider/ticketing/infra/k8s/ingress-srv.yaml
+++ b/1.mini-microservice-app-grider/ticketing/infra/k8s/ingress-srv.yaml
@@ -1,19 +1,26 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1 # Update the API version here
 kind: Ingress
 metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
     - host: ticketing.dev
       http:
         paths:
           - path: /api/users/?(.*)
-            pathType: Prefix
+            pathType: Prefix # Add this line to specify the path type
             backend:
               service:
-                name: auth-srv
+                name: auth-srv # Modify the service reference
+                port:
+                  number: 3000
+          - path: /?(.*)
+            pathType: Prefix # Add this line to specify the path type
+            backend:
+              service:
+                name: client-srv # Modify the service reference
                 port:
                   number: 3000
