--- a/1.mini-microservice-app-grider/ticketing/skaffold.yaml
+++ b/1.mini-microservice-app-grider/ticketing/skaffold.yaml
@@ -8,11 +8,19 @@ build:
   local:
     push: false
   artifacts:
-    - image: inquityy/auth
+    - image: cygnetops/auth
       context: auth
       docker:
         dockerfile: Dockerfile
       sync:
         manual:
           - src: "src/**/*.ts"
+            dest: .
+    - image: cygnetops/ticketing-client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.js"
             dest: .
