Restoring my k8s and making everything fork again and add test and routes file for tickets

--- a/1.mini-microservice-app-grider/ticketing/infra/k8s/tickets-depl.yaml
+++ b/1.mini-microservice-app-grider/ticketing/infra/k8s/tickets-depl.yaml
@@ -14,8 +14,10 @@ spec:
     spec:
       containers:
         - name: tickets
-          image: cygnetops/tickets
+          image: inquityy/tickets
           env:
+            - name: MONGO_URI
+              value: "mongodb://tickets-mongo-srv:27017/tickets"
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
