--- a/1.mini-microservice-app-grider/ticketing/infra/k8s/auth-depl.yaml
+++ b/1.mini-microservice-app-grider/ticketing/infra/k8s/auth-depl.yaml
@@ -14,8 +14,10 @@ spec:
     spec:
       containers:
         - name: auth
-          image: cygnetops/auth
+          image: inquityy/auth
           env:
+            - name: MONGO_URI
+              value: "mongodb://tickets-mongo-srv:27017/tickets"
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
